kubernetes/base/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-auth
spec:
  ingressClassName: nginx
  rules:
    - host: goodfood.localdev.me
      http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: ms-auth
                port:
                  number: 80
